// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render (Flex) gap 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`props should render as link (href) 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,15 +1,14 @@
- <a
+ <button
    aria-busy="false"
    class="components-flex css-mbzchx css-0 components-base-button css-1px5u32 css-sldsgx css-0 components-button css-19ecm5d-Flex-ItemsRow-classes css-1mm2cvy-View egi4jkx0"
    data-active="false"
    data-destructive="false"
    data-focused="false"
    data-icon="false"
    data-wp-c16t="true"
    data-wp-component="Button"
-   href="#"
    type="button"
  >
    <span
      class="css-1636tkh-Item css-jhhyjf-block components-flex-item css-s8mfij css-1mm2cvy-View egi4jkx0"
      data-g2-component="ButtonContent"
@@ -23,6 +22,6 @@
      class="css-zsg5ag-Elevation css-178mhg components-elevation css-1mm2cvy-View egi4jkx0"
      data-g2-component="ButtonElevation"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
- </a>
+ </button>
`;

exports[`props should render correctly 1`] = `
.emotion-9.emotion-9.emotion-9.emotion-9.emotion-9.emotion-9.emotion-9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border-color: transparent;
  border-radius: 2px;
  border-radius: var(--wp-g2-control-border-radius);
  border-style: solid;
  border-width: 1px;
  box-shadow: 0 0 0 0.5px transparent;
  box-shadow: 0 0 0 var(--wp-g2-control-box-shadow-focus-size) transparent;
  box-sizing: border-box;
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  height: auto;
  line-height: 1;
  min-height: 30px;
  min-height: var(--wp-g2-control-height);
  outline: none;
  padding-bottom: calc(4px * 1);
  padding-bottom: calc(var(--wp-g2-grid-base) * 1);
  padding-left: 12px;
  padding-left: var(--wp-g2-control-padding-x);
  padding-right: 12px;
  padding-right: var(--wp-g2-control-padding-x);
  padding-top: calc(4px * 1);
  padding-top: calc(var(--wp-g2-grid-base) * 1);
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  touch-action: manipulation;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: auto;
}

.emotion-9.emotion-9.emotion-9.emotion-9.emotion-9.emotion-9.emotion-9:hover,
.emotion-9.emotion-9.emotion-9.emotion-9.emotion-9.emotion-9.emotion-9:active,
.emotion-9.emotion-9.emotion-9.emotion-9.emotion-9.emotion-9.emotion-9:focus {
  -webkit-transition: all 200ms cubic-bezier( 0.12,0.8,0.32,1 );
  -webkit-transition: all var(--wp-g2-transition-duration) cubic-bezier( 0.12,0.8,0.32,1 );
  transition: all 200ms cubic-bezier( 0.12,0.8,0.32,1 );
  transition: all var(--wp-g2-transition-duration) cubic-bezier( 0.12,0.8,0.32,1 );
}

.emotion-9.emotion-9.emotion-9.emotion-9.emotion-9.emotion-9.emotion-9[disabled]:not( [aria-busy='true'] ),
.emotion-9.emotion-9.emotion-9.emotion-9.emotion-9.emotion-9.emotion-9[aria-disabled='true']:not( [aria-busy='true'] ) {
  opacity: 0.5;
  cursor: auto;
}

.emotion-9.emotion-9.emotion-9.emotion-9.emotion-9.emotion-9.emotion-9:focus {
  box-shadow: 0 0 0 0.5px #007cba;
  box-shadow: var(--wp-g2-control-box-shadow-focus);
}

.emotion-9.emotion-9.emotion-9.emotion-9.emotion-9.emotion-9.emotion-9[data-destructive='true']:focus {
  box-shadow: 0 0 0 0.5px #D94F4F;
  box-shadow: var(--wp-g2-control-destructive-box-shadow-focus);
}

.emotion-9.emotion-9.emotion-9.emotion-9.emotion-9.emotion-9.emotion-9[data-icon='true'] {
  min-width: 30px;
  min-width: var(--wp-g2-control-height);
}

.emotion-9.emotion-9.emotion-9.emotion-9.emotion-9.emotion-9.emotion-9 svg {
  display: block;
}

.emotion-11.emotion-11.emotion-11.emotion-11.emotion-11.emotion-11.emotion-11 {
  color: #007cba;
  color: var(--wp-g2-button-text-color);
  font-weight: 600;
  padding-left: calc(12px * calc(4/3));
  padding-left: var(--wp-g2-button-padding-x);
  padding-right: calc(12px * calc(4/3));
  padding-right: var(--wp-g2-button-padding-x);
}

.emotion-11.emotion-11.emotion-11.emotion-11.emotion-11.emotion-11.emotion-11:active {
  color: #007cba;
  color: var(--wp-g2-button-text-color-active);
}

.emotion-12.emotion-12.emotion-12.emotion-12.emotion-12.emotion-12.emotion-12 {
  background-color: transparent;
  background-color: var(--wp-g2-button-secondary-color);
  border-color: #007cba;
  border-color: var(--wp-g2-button-secondary-border-color);
  color: #007cba;
  color: var(--wp-g2-button-secondary-text-color);
}

.emotion-12.emotion-12.emotion-12.emotion-12.emotion-12.emotion-12.emotion-12:hover {
  background-color: transparent;
  background-color: var(--wp-g2-button-secondary-color-hover);
  border-color: #007cba;
  border-color: var(--wp-g2-button-secondary-border-color-hover);
}

.emotion-12.emotion-12.emotion-12.emotion-12.emotion-12.emotion-12.emotion-12:focus,
.emotion-12.emotion-12.emotion-12.emotion-12.emotion-12.emotion-12.emotion-12[data-focused='true'] {
  background-color: transparent;
  background-color: var(--wp-g2-button-secondary-color-focus);
  border-color: #007cba;
  border-color: var(--wp-g2-button-secondary-border-color-focus);
  color: #007cba;
  color: var(--wp-g2-button-secondary-text-color-focus);
}

.emotion-12.emotion-12.emotion-12.emotion-12.emotion-12.emotion-12.emotion-12:active {
  background-color: rgba(0, 0, 0, 0.05);
  background-color: var(--wp-g2-button-secondary-color-active);
  border-color: #007cba;
  border-color: var(--wp-g2-button-secondary-border-color-active);
  color: #007cba;
  color: var(--wp-g2-button-secondary-text-color-active);
}

.emotion-12.emotion-12.emotion-12.emotion-12.emotion-12.emotion-12.emotion-12[data-destructive='true'] {
  border-color: #D94F4F;
  border-color: var(--wp-g2-color-destructive);
  color: #D94F4F;
  color: var(--wp-g2-color-destructive);
}

.emotion-12.emotion-12.emotion-12.emotion-12.emotion-12.emotion-12.emotion-12[data-destructive='true']:hover,
.emotion-12.emotion-12.emotion-12.emotion-12.emotion-12.emotion-12.emotion-12[data-destructive='true']:active,
.emotion-12.emotion-12.emotion-12.emotion-12.emotion-12.emotion-12.emotion-12[data-destructive='true']:focus,
.emotion-12.emotion-12.emotion-12.emotion-12.emotion-12.emotion-12.emotion-12[data-destructive='true'][data-focused='true'] {
  border-color: #D94F4F;
  border-color: var(--wp-g2-color-destructive);
  color: #D94F4F;
  color: var(--wp-g2-color-destructive);
}

.emotion-12.emotion-12.emotion-12.emotion-12.emotion-12.emotion-12.emotion-12[data-destructive='true']:active {
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2 {
  display: var(--wp-g2-flex-item-display);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  opacity: 1;
  white-space: nowrap;
}

.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6 {
  border-radius: inherit;
  bottom: -1px;
  box-shadow: 0 0px 0px 0 rgba(0 ,0,0,0);
  opacity: 1;
  opacity: var(--wp-g2-elevation-intensity);
  left: -1px;
  right: -1px;
  top: -1px;
  -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  -webkit-transition: box-shadow var(--wp-g2-transition-duration) var(--wp-g2-transition-timing-function);
  transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  transition: box-shadow var(--wp-g2-transition-duration) var(--wp-g2-transition-timing-function);
}

.emotion-0 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-5 {
  background: transparent;
  display: block;
  margin: 0 !important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  text-align: center;
}

.emotion-14 > * + *:not(marquee) {
  margin-left: calc(4px * 2);
}

.emotion-14 > * {
  min-width: 0;
}

<button
  aria-busy="false"
  class="components-flex emotion-9 emotion-10 components-base-button emotion-11 emotion-12 emotion-10 components-button emotion-14 emotion-3 emotion-4"
  data-active="false"
  data-destructive="false"
  data-focused="false"
  data-icon="false"
  data-wp-c16t="true"
  data-wp-component="Button"
  type="button"
>
  <span
    class="emotion-0 emotion-1 components-flex-item emotion-2 emotion-3 emotion-4"
    data-g2-component="ButtonContent"
    data-wp-c16t="true"
    data-wp-component="FlexItem"
  >
    Lorem
  </span>
  <span
    aria-hidden="true"
    class="emotion-5 emotion-6 components-elevation emotion-3 emotion-4"
    data-g2-component="ButtonElevation"
    data-wp-c16t="true"
    data-wp-component="Elevation"
  />
</button>
`;

exports[`props should render describedBy 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,7 @@
  <button
    aria-busy="false"
-   aria-describedby="1"
    class="components-flex css-mbzchx css-0 components-base-button css-1px5u32 css-sldsgx css-0 components-button css-19ecm5d-Flex-ItemsRow-classes css-1mm2cvy-View egi4jkx0"
    data-active="false"
    data-destructive="false"
    data-focused="false"
    data-icon="false"
@@ -14,11 +13,11 @@
      class="css-1636tkh-Item css-jhhyjf-block components-flex-item css-s8mfij css-1mm2cvy-View egi4jkx0"
      data-g2-component="ButtonContent"
      data-wp-c16t="true"
      data-wp-component="FlexItem"
    >
-     WordPress.org
+     Lorem
    </span>
    <span
      aria-hidden="true"
      class="css-zsg5ag-Elevation css-178mhg components-elevation css-1mm2cvy-View egi4jkx0"
      data-g2-component="ButtonElevation"
`;

exports[`props should render disabled 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,7 @@
  <button
    aria-busy="false"
-   aria-disabled="true"
    class="components-flex css-mbzchx css-0 components-base-button css-1px5u32 css-sldsgx css-0 components-button css-19ecm5d-Flex-ItemsRow-classes css-1mm2cvy-View egi4jkx0"
    data-active="false"
    data-destructive="false"
    data-focused="false"
    data-icon="false"
`;

exports[`props should render elevation 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`props should render hasCaret 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -16,30 +16,10 @@
      data-wp-component="FlexItem"
    >
      Lorem
    </span>
    <span
-     class="css-1636tkh-Item components-flex-item css-37xewi css-1mm2cvy-View egi4jkx0"
-     data-g2-component="ButtonCaret"
-     data-wp-c16t="true"
-     data-wp-component="FlexItem"
-   >
-     <svg
-       aria-hidden="true"
-       focusable="false"
-       height="16"
-       role="img"
-       viewBox="0 0 24 24"
-       width="16"
-       xmlns="http://www.w3.org/2000/svg"
-     >
-       <path
-         d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
-       />
-     </svg>
-   </span>
-   <span
      aria-hidden="true"
      class="css-zsg5ag-Elevation css-178mhg components-elevation css-1mm2cvy-View egi4jkx0"
      data-g2-component="ButtonElevation"
      data-wp-c16t="true"
      data-wp-component="Elevation"
`;

exports[`props should render icon 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -2,23 +2,15 @@
    aria-busy="false"
    class="components-flex css-mbzchx css-0 components-base-button css-1px5u32 css-sldsgx css-0 components-button css-19ecm5d-Flex-ItemsRow-classes css-1mm2cvy-View egi4jkx0"
    data-active="false"
    data-destructive="false"
    data-focused="false"
-   data-icon="true"
+   data-icon="false"
    data-wp-c16t="true"
    data-wp-component="Button"
    type="button"
- >
-   <span
-     class="css-1636tkh-Item components-flex-item css-gzcy0h css-1mm2cvy-View egi4jkx0"
-     data-g2-component="ButtonIcon"
-     data-wp-c16t="true"
-     data-wp-component="FlexItem"
  >
-     <svg />
-   </span>
    <span
      class="css-1636tkh-Item css-jhhyjf-block components-flex-item css-s8mfij css-1mm2cvy-View egi4jkx0"
      data-g2-component="ButtonContent"
      data-wp-c16t="true"
      data-wp-component="FlexItem"
`;

exports[`props should render isControl 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

@@ -35,18 +35,10 @@
      "touch-action": "manipulation",
      "user-select": "none",
      "width": "auto",
    },
    Object {
-     "background-color": "var(--wp-g2-control-background-color)",
-     "border": "1px solid",
-     "border-color": "var(--wp-g2-control-border-color)",
-     "color": "var(--wp-g2-color-text)",
-     "font-family": "var(--wp-g2-font-family)",
-     "font-size": "var(--wp-g2-font-size)",
-   },
-   Object {
      "color": "var(--wp-g2-button-text-color)",
      "font-weight": "600",
      "padding-left": "var(--wp-g2-button-padding-x)",
      "padding-right": "var(--wp-g2-button-padding-x)",
    },
`;

exports[`props should render isDestructive 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

@@ -35,26 +35,19 @@
      "touch-action": "manipulation",
      "user-select": "none",
      "width": "auto",
    },
    Object {
-     "color": "var(--wp-g2-color-destructive)",
-   },
-   Object {
      "color": "var(--wp-g2-button-text-color)",
      "font-weight": "600",
      "padding-left": "var(--wp-g2-button-padding-x)",
      "padding-right": "var(--wp-g2-button-padding-x)",
    },
    Object {
      "background-color": "var(--wp-g2-button-secondary-color)",
      "border-color": "var(--wp-g2-button-secondary-border-color)",
      "color": "var(--wp-g2-button-secondary-text-color)",
-   },
-   Object {
-     "border-color": "var(--wp-g2-color-destructive)",
-     "color": "var(--wp-g2-color-destructive)",
    },
    Object {
      "-ms-flex-align": "center",
      "-ms-flex-direction": "row",
      "-ms-flex-pack": "center",
`;

exports[`props should render isLoading 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`props should render isNarrow 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

@@ -35,14 +35,10 @@
      "touch-action": "manipulation",
      "user-select": "none",
      "width": "auto",
    },
    Object {
-     "padding-left": "var(--wp-g2-control-padding-x)",
-     "padding-right": "var(--wp-g2-control-padding-x)",
-   },
-   Object {
      "color": "var(--wp-g2-button-text-color)",
      "font-weight": "600",
      "padding-left": "var(--wp-g2-button-padding-x)",
      "padding-right": "var(--wp-g2-button-padding-x)",
    },
`;

exports[`props should render isRounded 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

@@ -35,13 +35,10 @@
      "touch-action": "manipulation",
      "user-select": "none",
      "width": "auto",
    },
    Object {
-     "border-radius": "99999px",
-   },
-   Object {
      "color": "var(--wp-g2-button-text-color)",
      "font-weight": "600",
      "padding-left": "var(--wp-g2-button-padding-x)",
      "padding-right": "var(--wp-g2-button-padding-x)",
    },
`;

exports[`props should render isSubtle 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

@@ -35,14 +35,10 @@
      "touch-action": "manipulation",
      "user-select": "none",
      "width": "auto",
    },
    Object {
-     "border-color": "var(--wp-g2-control-border-color-subtle)",
-     "color": "var(--wp-g2-color-text)",
-   },
-   Object {
      "color": "var(--wp-g2-button-text-color)",
      "font-weight": "600",
      "padding-left": "var(--wp-g2-button-padding-x)",
      "padding-right": "var(--wp-g2-button-padding-x)",
    },
`;

exports[`props should render prefix 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -8,20 +8,10 @@
    data-wp-c16t="true"
    data-wp-component="Button"
    type="button"
  >
    <span
-     class="css-1636tkh-Item components-flex-item css-gzcy0h css-1mm2cvy-View egi4jkx0"
-     data-g2-component="ButtonPrefix"
-     data-wp-c16t="true"
-     data-wp-component="FlexItem"
-   >
-     <span>
-       Prefix
-     </span>
-   </span>
-   <span
      class="css-1636tkh-Item css-jhhyjf-block components-flex-item css-s8mfij css-1mm2cvy-View egi4jkx0"
      data-g2-component="ButtonContent"
      data-wp-c16t="true"
      data-wp-component="FlexItem"
    >
`;

exports[`props should render size 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

@@ -41,15 +41,10 @@
      "font-weight": "600",
      "padding-left": "var(--wp-g2-button-padding-x)",
      "padding-right": "var(--wp-g2-button-padding-x)",
    },
    Object {
-     "min-height": "var(--wp-g2-control-height-small)",
-     "padding-left": "var(--wp-g2-control-padding-x)",
-     "padding-right": "var(--wp-g2-control-padding-x)",
-   },
-   Object {
      "background-color": "var(--wp-g2-button-secondary-color)",
      "border-color": "var(--wp-g2-button-secondary-border-color)",
      "color": "var(--wp-g2-button-secondary-text-color)",
    },
    Object {
`;

exports[`props should render suffix 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -16,20 +16,10 @@
      data-wp-component="FlexItem"
    >
      Lorem
    </span>
    <span
-     class="css-1636tkh-Item components-flex-item css-gzcy0h css-1mm2cvy-View egi4jkx0"
-     data-g2-component="ButtonSuffix"
-     data-wp-c16t="true"
-     data-wp-component="FlexItem"
-   >
-     <span>
-       Suffix
-     </span>
-   </span>
-   <span
      aria-hidden="true"
      class="css-zsg5ag-Elevation css-178mhg components-elevation css-1mm2cvy-View egi4jkx0"
      data-g2-component="ButtonElevation"
      data-wp-c16t="true"
      data-wp-component="Elevation"
`;

exports[`props should render variant 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

@@ -41,13 +41,13 @@
      "font-weight": "600",
      "padding-left": "var(--wp-g2-button-padding-x)",
      "padding-right": "var(--wp-g2-button-padding-x)",
    },
    Object {
-     "background-color": "var(--wp-g2-button-primary-color)",
-     "border-color": "var(--wp-g2-button-primary-border-color)",
-     "color": "var(--wp-g2-button-primary-text-color)",
+     "background-color": "var(--wp-g2-button-secondary-color)",
+     "border-color": "var(--wp-g2-button-secondary-border-color)",
+     "color": "var(--wp-g2-button-secondary-text-color)",
    },
    Object {
      "-ms-flex-align": "center",
      "-ms-flex-direction": "row",
      "-ms-flex-pack": "center",
`;
